попрвлены коэффициенты в анализе и подсчет доменных имен